fix: modal overlapping, transition

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -12,7 +12,6 @@ body {
 
 a {
   color: inherit;
-  position: relative;
 }
 
 html {
